<resources>
    <string name="app_name">BATIN.CO</string>

    <string name="item_store">Store Name</string>
    <string name="item_address">Store Address</string>
    <string name="item_operational_distance">%1$s • %1$s km</string>
    <string name="item_arrow">Check this on Gmaps</string>

    <string name="batik_name">Batik Name</string>
    <string name="batik_origin">Batik Origin</string>

    <string name="detail_meaning">Batik Meaning</string>

    <string name="scan">Scan Result</string>
    <string name="scan_percent">%1$s%</string>
    <string name="scan_back">Back to Camera</string>

    <string name="scan_result">Scan Result of Object Detection</string>

    <string name="menu_home">Home</string>
    <string name="menu_discover">Discover</string>
    <string name="menu_scan">Scan Batik</string>

    <string name="home_search_hint">Search batik</string>
    <string name="home_greeting">Greeting!\nFriends</string>
    <string name="home_scan_button">Discover your batik here!</string>
    <string name="home_content_title">Discover the beauty of Batik Indonesia</string>

    <string name="error">Timeout</string>
    <string name="reload">Reload</string>

    <string name="cam_capture">Capture photo</string>

    <string name="dialog_title">Choose one..</string>
    <string name="dialog_confirm">Upload this photo?</string>
    <string name="dialog_retry">Retry</string>
    <string name="dialog_object_detect">Detect the batik</string>
    <string name="dialog_object_detect_desc">Identify the batik\nof the clothes</string>
    <string name="dialog_motif">Detect the motif</string>
    <string name="dialog_motif_desc">Determine the motif\nof this batik</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>