<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_title"
        android:layout_margin="8dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tv_dialog_obj_desc"
        />

    <TextView
        android:id="@+id/tv_dialog_obj_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:maxLines="3"
        android:text="@string/dialog_object_detect_desc"
        app:layout_constraintTop_toBottomOf="@+id/tv_dialog_title"
        app:layout_constraintBottom_toTopOf="@+id/iv_dialog_obj"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_dialog_motif_desc"
        />

    <TextView
        android:id="@+id/tv_dialog_motif_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:maxLines="3"
        android:text="@string/dialog_motif_desc"
        app:layout_constraintTop_toTopOf="@+id/tv_dialog_obj_desc"
        app:layout_constraintBottom_toTopOf="@+id/iv_dialog_motif"
        app:layout_constraintStart_toEndOf="@+id/tv_dialog_obj_desc"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_dialog_obj"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_margin="8dp"
        android:src="@drawable/object_detection"
        app:layout_constraintStart_toStartOf="@+id/tv_dialog_obj_desc"
        app:layout_constraintTop_toBottomOf="@+id/tv_dialog_obj_desc"
        app:layout_constraintEnd_toEndOf="@+id/tv_dialog_obj_desc"
        app:layout_constraintBottom_toTopOf="@+id/btn_dialog_obj"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_dialog_motif"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_margin="8dp"
        android:src="@drawable/motif"
        app:layout_constraintTop_toBottomOf="@+id/tv_dialog_motif_desc"
        app:layout_constraintStart_toStartOf="@+id/tv_dialog_motif_desc"
        app:layout_constraintEnd_toEndOf="@+id/tv_dialog_motif_desc"
        app:layout_constraintBottom_toTopOf="@+id/btn_dialog_motif"

        />

    <Button
        android:id="@+id/btn_dialog_obj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_object_detect"
        app:layout_constraintStart_toStartOf="@+id/iv_dialog_obj"
        app:layout_constraintEnd_toEndOf="@+id/iv_dialog_obj"
        app:layout_constraintTop_toBottomOf="@+id/iv_dialog_obj"
        app:layout_constraintBottom_toBottomOf="parent"
        />


    <Button
        android:id="@+id/btn_dialog_motif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_motif"
        app:layout_constraintStart_toStartOf="@+id/iv_dialog_motif"
        app:layout_constraintEnd_toEndOf="@+id/iv_dialog_motif"
        app:layout_constraintTop_toBottomOf="@+id/iv_dialog_motif"
        app:layout_constraintBottom_toBottomOf="@+id/btn_dialog_obj"
        />



</androidx.constraintlayout.widget.ConstraintLayout>