<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="50dp"
    android:layout_gravity="center"
    android:layout_margin="8dp"
    card_view:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp" >

        <ImageView
            android:id="@+id/iv_store_photo"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:src="@drawable/store_placeholder"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_item_store"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="1"
            android:text="@string/item_store"
            android:textSize="18sp"
            android:textStyle="bold"
            card_view:layout_constraintBottom_toTopOf="@+id/tv_item_address"
            card_view:layout_constraintEnd_toStartOf="@+id/iv_arrow"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toEndOf="@+id/iv_store_photo"
            card_view:layout_constraintTop_toTopOf="@+id/iv_store_photo" />

        <TextView
            android:id="@+id/tv_item_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="1"
            android:text="@string/item_address"
            card_view:layout_constraintBottom_toTopOf="@+id/tv_item_operational_distance"
            card_view:layout_constraintEnd_toStartOf="@+id/iv_arrow"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toEndOf="@+id/iv_store_photo"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_item_store" />

        <TextView
            android:id="@+id/tv_item_operational_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:text="@string/item_operational_distance"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toStartOf="@+id/iv_arrow"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toEndOf="@+id/iv_store_photo"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_item_address" />

        <ImageView
            android:id="@+id/iv_arrow"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:src="@drawable/ic_arrow_forward"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/item_arrow" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>