<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.scanresult.ScanResultObjectFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
            android:id="@+id/tv_scan_page_obj"
            style="@style/TextAppearance.Material3.HeadlineMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:text="@string/scan"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_scan_obj"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            app:cardCornerRadius="10dp">

            <ImageView
                android:id="@+id/iv_scan_photo_obj"
                android:layout_width="210dp"
                android:layout_height="350dp"
                android:scaleType="centerCrop"
                android:src="@drawable/batik_placeholder"
                tools:ignore="ContentDescription" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_scan_result_obj"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:maxLines="3"
            android:textSize="18sp"
            android:text="@string/scan_result"
            />

        <Button
            android:id="@+id/btn_scan_back_obj"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="4dp"
            android:text="@string/scan_back" />

        <Button
            android:id="@+id/btn_scan_home_obj"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="4dp"
            android:text="@string/scan_home" />

    </LinearLayout>

</ScrollView>